@@ -1,3 +1,9 @@
+2005-11-17  Wim Taymans  <wim@fluendo.com>
+
+	* gst/net/gstnetclientclock.c: (do_linear_regression),
+	(gst_net_client_clock_do_select), (gst_net_client_clock_thread):
+	Fix compilation, uninitialized vars and a forgotten continue.
+
 2005-11-17  Andy Wingo  <wingo@pobox.com>
 
 	* check/Makefile.am (check_PROGRAMS): 
